# PixelPal

./: .env.example  .gitignore  Cargo.toml  README.md  bevy_game.js  bevy_game.js.bak  index.html  style.css
.github/workflows/: ci.yml  deploy.yml  release.yml
src/: main.rs
src/ai/: chat_gpt.rs  mod.rs
src/bundles/: action.rs  animation.rs  effect.rs  gpt.rs  map.rs  mob.rs  mod.rs  player.rs
src/components/: action.rs  animation.rs  character.rs  characters.rs  display.rs  flags.rs  gpt.rs  map.rs  mapping.rs  mod.rs  texture.rs  textures.rs  ui.rs
src/constants/: action.rs  bot.rs  character.rs  characters.rs  display.rs  generation.rs  gpt.rs  map.rs  mapping.rs  mod.rs  sprites.rs  textures.rs  tileset.rs  tps.rs  ui.rs
src/events/: bot.rs
src/generation/: noise.rs
src/map/: mod.rs
src/systems/: animation.rs  bot.rs  chunk.rs  input.rs  mod.rs  movement.rs  setup.rs
src/util/: animation.rs  chat_gpt.rs  distribution.rs  effect.rs  gpt.rs  messages.rs  mod.rs  noise.rs  position.rs  tile.rs
wasm/: index.html  style.css
