[package]
name = "pixel_pal"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.193"
schemars = "0.8.16"
phf = { version = "0.11", features = ["macros"] }
strum = "0.25.0"
strum_macros = "0.25.3"
bevy = { version = "0.12.1" }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
benimator = { git = "https://github.com/jcornaz/benimator" }
chatgpt_rs = { version = "1.2.3", features = ["functions"] }
dotenv = "0.15.0"
async-global-executor = { version = "2.4.1", features = ["tokio"] }
noise = "0.8"
once_cell = "1.19.0"
bevy_pixel_camera = "0.12.1"
tokio = "1.35.1"
pathfinding = "4.8.0"
rand = "0.8.5"
quick_cache = "0.4.0"
futures-lite = "2.2.0"