[package]
name = "pixel_pal"
version = "0.0.3"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true

[profile.dev]
opt-level = 's'

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.1" }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", features = ["atlas"] }
bevy_pixel_camera = "0.12.1"

benimator = { git = "https://github.com/jcornaz/benimator" }
pathfinding = "4.8.0"

serde = "1.0.193"
serde_json = "1.0.111"

strum = "0.25.0"
strum_macros = "0.25.3"

phf = { version = "0.11", features = ["macros"] }
once_cell = "1.19.0"
quick_cache = "0.4.0"

noise = "0.8"
rand = "0.8.5"

tokio = { version = "1.35.1", features = ["sync"] }
reqwest = { version = "0.11.23", features = ["json"] }

dotenv = "0.15.0"
async-compat = "0.2.3"
phf_shared = "0.11.2"

